# APUE

./: .gitignore
Abgabe/: u2_1_clean  u2_1_clean.cpp  u2_1_dirty  u2_1_dirty.cpp  u2_2.cpp  u2_3.cpp
Uebung2/: u2_1_clean.cpp  u2_1_dirty.cpp  u2_2  u2_2.cpp  u2_3  u2_3.cpp  ue2_2_easy  ue2_2_easy.cpp  ue2_3_arg  ue2_3_arg.cpp
Uebung2/Uebung2_final/: u2_1_clean  u2_1_dirty  u2_2  u2_3  u2_3.cpp
Uebung3/u3_1/: CMakeLists.txt  gc_content.cpp  input.txt  output.txt
Uebung3/u3_2/: CMakeLists.txt  translate_dna.cpp
Uebung3/u3_3/: CMakeLists.txt  translate_protein.cpp
